# simtrans

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  reinforce.py
simtrans/: build_toy_data.py  data.py  model.py  optim.py  skip_lstm.py  tokenize.py  train_spm.py  transformer.py  transformer_encoder_rnn_decoder.py  utils.py  wait_k_transformer.py
simtrans/reinforce/: model.py  optim.py  reinforce_model.py  reward.py  transformer_encoder_rnn_decoder_reinforce.py
simtrans/reinforce/awesome_align/: activations.py  configuration_bert.py  configuration_utils.py  file_utils.py  modeling.py  modeling_utils.py  sparsemax.py  tokenization_bert.py  tokenization_utils.py
simtrans/sentence_rewrite/: main.py
tools/: split_tsv.py
